tests/rosetta/out/Kotlin/15-puzzle-solver.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/15-puzzle-solver.kt:12:21: error: unresolved reference: FifteenPuzzleExample
    println(testpkg.FifteenPuzzleExample())
                    ^
