tests/rosetta/out/Kotlin/15-puzzle-solver.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:30:57Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)
// Code generated from 15-puzzle-solver.mochi

object testpkg {
    fun Add(a: Int, b: Int): Int = a + b
    const val Pi: Double = 3.14
    var Answer: Int = 42
}

fun main() {
    println(testpkg.FifteenPuzzleExample())
}
